[gd_scene load_steps=5 format=3 uid="uid://un86ip0c1s75"]

[ext_resource type="PackedScene" uid="uid://wrja75sijyfj" path="res://scenes/dice_inventory.tscn" id="1_biodx"]
[ext_resource type="Script" path="res://scenes/player_info_element.gd" id="1_i6yfk"]

[sub_resource type="Gradient" id="Gradient_ohbm4"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5cfcg"]
gradient = SubResource("Gradient_ohbm4")
width = 32

[node name="player_info_element" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_i6yfk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
offset_top = 1.0
offset_right = 108.0
offset_bottom = 288.0
color = Color(0.144063, 0.144063, 0.144063, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 108.0
offset_bottom = 288.0
theme_override_constants/separation = 0

[node name="player_info" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="player_portrait" type="TextureRect" parent="VBoxContainer/player_info"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 2
texture = SubResource("GradientTexture1D_5cfcg")

[node name="player_name" type="Label" parent="VBoxContainer/player_info"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Defaulty Defaulter
"

[node name="dice_inventory" parent="VBoxContainer" instance=ExtResource("1_biodx")]
layout_mode = 2
